Show quantity of items

--- a/app/templates/directives/slick-item/slick-item.jade
+++ b/app/templates/directives/slick-item/slick-item.jade
@@ -9,7 +9,7 @@ slick-wrapper(
     .slick-content(ng-click="sicVm.onClick()(providerItem)" class="clickeable")
       .img-wrapper
         img.img-circle(
-          data-lazy="{{ ::providerItem.provider_item.imagenes[0].imagen_url }}"
+          data-lazy="{{ ::providerItem.provider_item.imagenes[0].imagen_url | defaultImage }}"
         )
 
       .customer-item-description
@@ -17,5 +17,7 @@ slick-wrapper(
           | {{ ::providerItem.provider_item.titulo }}
         .customer-item--value
           span
+            | {{::providerItem.cantidad}}
+            | x&nbsp;
             price(amount="{{providerItem.provider_item_precio_cents * providerItem.cantidad}}"
                   currency="{{providerItem.provider_item_precio_currency}}")
